# Scarlet

./: .gitignore  ABI_ZONE_IMPLEMENTATION.md  Cargo.toml  Dockerfile  Makefile.toml  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  TTY_DESIGN.md  VFS_REFACTOR_PLAN.md  rust-toolchain  test-kernel
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/lds/: aarch64_qemu_virt.ld  qemu_virt.ld  qemu_virt_aarch64.ld
kernel/src/: api.rs  earlycon.rs  environment.rs  main.rs  profiler.rs  symbol.rs  test.rs  test_export.rs  time.rs  timer.rs
kernel/src/abi/: mod.rs  scarlet.rs
kernel/src/arch/: mod.rs
kernel/src/device/: events.rs  fdt.rs  manager.rs  mod.rs  platform.rs
kernel/src/driver/: mod.rs
kernel/src/drivers/: mod.rs
kernel/src/executor/: executor.rs  mod.rs  tests.rs  vfs_tests.rs
kernel/src/fs/: hardlink_test.rs  helper.rs  mod.rs  mount_tree.rs  params.rs  syscall.rs  testfs.rs  tests.rs  tmpfs.rs
kernel/src/initcall/: driver.rs  early.rs  late.rs  mod.rs
kernel/src/interrupt/: controllers.rs  init.rs  manager.rs  mod.rs
kernel/src/ipc/: event.rs  event_kernel_object_design.rs  event_objects.rs  mod.rs  pipe.rs  syscall.rs
kernel/src/mem/: allocator.rs  mod.rs  page.rs
kernel/src/net/: mod.rs
kernel/src/network/: demo.rs  enhanced_pipeline.rs  error.rs  manager.rs  (+12 more)
kernel/targets/: aarch64-unknown-none-elf.json  riscv64gc-unknown-none-elf.json
kernel/tools/: analyze_fat32_directory.py  create-ext2-image.sh  create-fat32-image.sh  debug.sh  find-test-binary.sh  gdb-connect.sh  run.sh  run_aarch64.sh  test.sh  test_aarch64.sh
(+339 files in other folders)
