[package]
name = "Scarlet"
version = "0.11.2"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
fdt = "0.1.5"
slab_allocator_rs = "1.0.2"
spin = "0.10.0"
hashbrown = "0.15"

[build-dependencies]
syn = { version = "2.0.1", features = ["full", "visit"] }
quote = "1.0"
walkdir = "2"
