[package]
name = "Scarlet"
version = "0.13.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
fdt = "0.1.5"
slab_allocator_rs = "1.0.2"
spin = "0.10.0"
hashbrown = "0.16.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"], optional = true }

[features]
default = ["profiler"]
profiler = ["dep:lazy_static"]